// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/AddButton Default 1`] = `
<button
  className="sc-gsTCUz hhyhje"
  onClick={[Function]}
>
  <svg>
    iconmonstr-plus-2.svg
  </svg>
</button>
`;

exports[`Storyshots Atoms/AddButton Playground 1`] = `
<button
  className="sc-gsTCUz hhyhje"
  onClick={[Function]}
>
  <svg>
    iconmonstr-plus-2.svg
  </svg>
</button>
`;

exports[`Storyshots Atoms/Card Default 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Card For List 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Card Playground 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard Default 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard For List 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard Playground 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/FiltersViewer Default 1`] = `
<div
  className="sc-kstrdz elxhyL"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/FiltersViewer Playground 1`] = `
<div
  className="sc-kstrdz elxhyL"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageHolder Primary 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-jrAGrp kbnCNd"
  >
    <div
      className="sc-dlfnbm jzxTJJ"
    >
      <div
        className="sc-hKgILt hABwZ"
      >
        <h4>
          Processed Image
        </h4>
      </div>
      <div
        className="sc-jSgupP cPzjif"
      >
        <div
          className="sc-kEjbxe dcmYvS"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageUploader Default 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-iqHYGH hOmcmt"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="sc-dlfnbm jzxTJJ"
    >
      <div
        className="sc-hKgILt hABwZ"
      >
        <h4>
          Original Image
        </h4>
      </div>
      <div
        className="sc-jSgupP cPzjif"
      >
        <div
          className="sc-crrsfI XDNcM"
        >
          
          <div
            className="sc-dQppl goGEDp"
          >
            <div
              className="sc-bqyKva ewfsuP"
            >
              <svg>
                upload.svg
              </svg>
            </div>
            <span>
              Drag & Drop files here or click to upload
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageUploader Playground 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-iqHYGH hOmcmt"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="sc-dlfnbm jzxTJJ"
    >
      <div
        className="sc-hKgILt hABwZ"
      >
        <h4>
          Original Image
        </h4>
      </div>
      <div
        className="sc-jSgupP cPzjif"
      >
        <div
          className="sc-crrsfI XDNcM"
        >
          
          <div
            className="sc-dQppl goGEDp"
          >
            <div
              className="sc-bqyKva ewfsuP"
            >
              <svg>
                upload.svg
              </svg>
            </div>
            <span>
              Drag & Drop files here or click to upload
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ModulesSearcher Default 1`] = `
<div
  className="sc-hBEYos dxYlPH"
>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        NotCanny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ModulesSearcher Playground 1`] = `
<div
  className="sc-hBEYos gIHzFk"
>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        NotCanny
      </h4>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    >
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-iBPRYJ facBnY"
      >
        <label
          className="sc-pFZIQ kkcIHp"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-fubCfw gKemuU"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;
